Bug 517866, restore focus check so that first visible content is searched for when finding, fixes most noticeable issue with finding in unstyled xml documents, r=neil